# CHIP-8-Interpreter

./: .gitignore  .gitmodules  CMakeLists.txt  Core.cpp  Core.h  README.md  Renderer.cpp  Renderer.h  main.cpp
src/: Audio.cpp  Audio.h  Core.cpp  Core.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  main.cpp
